Attempted fix to mobile interface.

--- a/index.html
+++ b/index.html
@@ -12,41 +12,41 @@
                     <col>
                     <br>
                     <figcaption>New Year's Resolution</figcaption><br>
-                    <audio controls src="01-01.mp3"></audio><br>
+                    <audio controls src="01-01.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Objective Value</figcaption><br>
-                    <audio controls src="01-02.mp3"></audio><br>
+                    <audio controls src="01-02.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Overcoming the Obstacle</figcaption><br>
-                    <audio controls src="01-03.mp3"></audio><br>
+                    <audio controls src="01-03.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <figcaption>B-Roll</figcaption><br>
-                    <audio controls src="01-04.mp3"></audio><br>
+                    <audio controls src="01-04.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Patience Where Afforded</figcaption><br>
-                    <audio controls src="01-05.mp3"></audio><br>
+                    <audio controls src="01-05.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Big Man</figcaption><br>
-                    <audio controls src="01-06.mp3"></audio><br>
+                    <audio controls src="01-06.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Three Fingers</figcaption><br>
-                    <audio controls src="01-07.mp3"></audio><br>
+                    <audio controls src="01-07.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Creature of Misfortune</figcaption><br>
-                    <audio controls src="01-08.mp3"></audio><br>
+                    <audio controls src="01-08.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                 <colgroup><col>
@@ -56,17 +56,17 @@
                     <br>
                     <col>
                     <figcaption>To Engage in the Sport of Trust</figcaption><br>
-                    <audio controls src="02-01.mp3"></audio><br>
+                    <audio controls src="02-01.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Perform</figcaption><br>
-                    <audio controls src="02-02.mp3"></audio><br>
+                    <audio controls src="02-02.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Everything</figcaption><br>
-                    <audio controls src="02-03.mp3"></audio><br>
+                    <audio controls src="02-03.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                 <colgroup><col>
@@ -75,27 +75,27 @@
                     <p><a href="https://solipcisor.bandcamp.com/album/emulated-greys" target="_blank">Lyrics</a> via Bandcamp</p></colgroup>
                     <col>
                     <figcaption>Weathervanes</figcaption><br>
-                    <audio controls src="03-01.mp3"></audio><br>
+                    <audio controls src="03-01.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Somo Somo</figcaption><br>
-                    <audio controls src="03-02.mp3"></audio><br>
+                    <audio controls src="03-02.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Discomplicated</figcaption><br>
-                    <audio controls src="03-03.mp3"></audio><br>
+                    <audio controls src="03-03.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Liar Savant</figcaption><br>
-                    <audio controls src="03-04.mp3"></audio><br>
+                    <audio controls src="03-04.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Things to Come</figcaption><br>
-                    <audio controls src="03-05.mp3"></audio><br>
+                    <audio controls src="03-05.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                 <colgroup><col>
@@ -105,7 +105,7 @@
                     <br>
                     <col>
                     <figcaption>Recycled Eloquence</figcaption><br>
-                    <audio controls src="04-01.mp3"></audio><br>
+                    <audio controls src="04-01.mp3" width="90%"></audio><br>
                     <p>Original concept published by TV Totem Pole in 2020.</p>
                     </col>
                     <br>
@@ -116,17 +116,17 @@
                     <br>
                     <col>
                     <figcaption>Expectation Management</figcaption><br>
-                    <audio controls src="05-01.mp3"></audio><br>
+                    <audio controls src="05-01.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Too Late to Ask</figcaption><br>
-                    <audio controls src="05-02.mp3"></audio><br>
+                    <audio controls src="05-02.mp3" width="90%"></audio><br>
                     </col>
                     <br>
                     <col>
                     <figcaption>Living the Dream</figcaption><br>
-                    <audio controls src="05-03.mp3"></audio><br>
+                    <audio controls src="05-03.mp3" width="90%"></audio><br>
                     </col>
                     <br>
             </table>
